--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jwt-decode": "^3.1.2",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "17.0.2",
     "react-number-format": "^4.9.1",
     "react-toastify": "^8.1.0"
